# ease-assistant

./: .env.example  Dockerfile  assistant.py  docker-compose.yaml  main.py  model.py  pyproject.toml
